Actualicé un montón de cosas para ver si funciona con la plantilla blank

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pacm",
   "version": "0.0.3",
-  "description": "pacm: Preventive and corrective maintenance",
+  "description": "PaCM: Preventive and corrective maintenance",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -20,11 +20,12 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-network-information"
   ],
   "cordovaPlatforms": [
     "ios",
-	"android",
+    "android",
     "wp8"
   ]
 }
