Probando algo más, habilitando los plugins en el config.xml

--- a/package.json
+++ b/package.json
@@ -23,9 +23,5 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-network-information"
   ],
-  "cordovaPlatforms": [
-    "ios",
-    "android",
-    "wp8"
-  ]
+  "cordovaPlatforms": []
 }
