Mejoras en los estilos y mejoras generales en nuevo mantenimiento

--- a/ionic.project
+++ b/ionic.project
@@ -4,7 +4,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://eccmant.emhesolutions.com/"
+      "proxyUrl": "http://pacm.app/"
     }
   ]
 }
